# django_test_site

./: .editorconfig  .gitignore  .pylintrc  Makefile  docker-compose.yaml  prompt.txt
django_app/: Dockerfile  pyproject.toml
django_app/apps/polls/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
django_app/apps/polls/migrations/: 0001_initial.py
django_app/apps/polls/tests/: test_models.py  test_serializers.py  test_urls.py  test_views.py
django_app/common/: caches.py  constants.py  decorators.py  exceptions.py  loggers.py  loggers_debug.py  paginations.py  utils.py
django_app/core/: __init__.py  asgi.py  celery.py  celery_schedule.py  settings copy.py  settings.py  settings_sentry_sdk.py  urls.py  views.py  wsgi.py
nginx_app/: nginx.conf
utils.d/: delete__pycache__.sh  generate_prompt.sh
wiki.d/: history.txt  howto.docker_network_create.txt  howto.init_poetry.txt
